# pyaruco

./: CMakeLists.txt  README.md  conversion.h  pymarkerdetector.cpp  setup.py.in
